--- a/frontend/src/ui/locales/de.json
+++ b/frontend/src/ui/locales/de.json
@@ -61,9 +61,10 @@
     "app.user-details.tab.roles": "Anwendungsrollen",
     "app.edit-event.tab.data": "Reisedaten",
     "app.edit-event.tab.positions": "Crew",
-    "app.account.tab.data": "Stammdaten",
+    "app.account.tab.data": "Persöhnliche Daten",
     "app.account.tab.contact": "Kontaktdaten",
     "app.account.tab.credentials": "Zugangsdaten",
+    "app.account.tab.qualifications": "Qualifikationen",
     "app.role.ROLE_ADMIN": "Admin",
     "app.role.ROLE_EVENT_PLANNER": "Reiseplaner:in",
     "app.role.ROLE_EVENT_LEADER": "Reiseleiter:in",
