add more user fields

--- a/frontend/src/ui/locales/de.json
+++ b/frontend/src/ui/locales/de.json
@@ -59,12 +59,17 @@
     "app.user-details.tab.certificates": "Qualifikationen",
     "app.user-details.tab.events": "Reisen",
     "app.user-details.tab.roles": "Anwendungsrollen",
+    "app.user-details.tab.emergency": "Notfallinformationen",
+    "app.user-details.tab.other": "Sonstige Daten",
     "app.edit-event.tab.data": "Reisedaten",
     "app.edit-event.tab.positions": "Crew",
     "app.account.tab.data": "Persöhnliche Daten",
     "app.account.tab.contact": "Kontaktdaten",
     "app.account.tab.credentials": "Zugangsdaten",
     "app.account.tab.qualifications": "Qualifikationen",
+    "app.account.tab.emergency": "Notfallinformationen",
+    "app.account.tab.other": "Sonstiges",
+    "app.account.tab.diet": "Ernährung",
     "app.role.ROLE_ADMIN": "Admin",
     "app.role.ROLE_EVENT_PLANNER": "Reiseplaner:in",
     "app.role.ROLE_EVENT_LEADER": "Reiseleiter:in",
