--- a/frontend/src/ui/locales/de.json
+++ b/frontend/src/ui/locales/de.json
@@ -63,7 +63,7 @@
     "app.user-details.tab.other": "Sonstige Daten",
     "app.edit-event.tab.data": "Reisedaten",
     "app.edit-event.tab.positions": "Crew",
-    "app.account.tab.data": "Persöhnliche Daten",
+    "app.account.tab.data": "Persönliche Daten",
     "app.account.tab.contact": "Kontaktdaten",
     "app.account.tab.credentials": "Zugangsdaten",
     "app.account.tab.qualifications": "Qualifikationen",
