change event details for i18n

--- a/frontend/src/ui/locales/de.yml
+++ b/frontend/src/ui/locales/de.yml
@@ -294,3 +294,25 @@ views:
       create-event: "Neue Veranstaltung"
       days: '{count} Tag|{count} Tage'
       draft: "Entwurf"
+    details:
+      info-planning: "Diese Veranstaltung befindet sich noch in der Planung. Eine Anmeldung garantiert keine Teilnahme an der Reise! Sobald die Crewplanung veröffentlicht wird, wirst du per Email darüber informiert."
+      info-canceled: "Diese Veranstaltung wurde abgesagt!"
+      info-assigned: "Du bist für diese Veranstaltung als {position} eingeplant."
+      info-confirmed: "Du hast deine Teilnahme bestätigt."
+      info-waitinglist: "Du stehst für diese Veranstaltung als {position} auf der Warteliste"
+      info-missing-crew: "Für diese Veranstaltung wird noch Crew für die folgenden Positionen gesucht: {positions}"
+      leave-crew: "Teilnahme absagen"
+      leave-waitinglist: "Warteliste verlassen"
+      sign-up: "Anmelden"
+      edit-event: "Veranstaltung bearbeiten"
+      save-calendar: "In Kalender speichern"
+      create-calendar-entry: "Kalendereintrag erstellen"
+      edit-registration: "Anmeldung bearbeiten"
+      add-note: "Notiz fürs Büro hinzufügen"
+      generate-imo-list: "IMO Liste generieren"
+      generate-consumption-list: "Verzehrliste generieren"
+      generate-captain-list: "Kapitänsliste generieren"
+      leave-crew-dialog:
+        title: "Teilnahme absagen?"
+        message: "Bist du sicher, dass du deine Teilnahme an der Veranstaltung {event} absagen möchtest? Du hast dann keinen Anspruch mehr auf eine Teilnahme an der Veranstaltung und dein Platz wird an eine andere Person vergeben."
+        submit: "Teilnahme absagen"
